# Data_Sturcture_Exercise

./: README.md
Chapter1/1_Fibonacci/: fib.cpp  main.cpp
Chapter1/Chapter1_vs/: Chapter1.sln
Chapter1/Chapter_1_unrun_code/: 1_23_Hanoi.cpp  1_25_gcdCN.cpp  1_26_shift2.cpp  1_27_Ackermann.cpp  1_29_Hailstone.cpp  CMakeLists.txt  Fib.cpp  Fib.h  Fun1_12.cpp  Fun1_13.cpp  Fun1_14.cpp  Fun1_15.cpp  Fun1_7.cpp  main.cpp
Chapter2/2_Vector/: CMakeLists.txt  Exercise_2_22_Saddleback.h  Vector.h  Vector_deduplicate.h  Vector_disordered.h  Vector_find.h  Vector_insert.h  Vector_search_binary_C.h  Vector_sort.h  Vector_traverse.h  Vector_unsort.h  main.cpp  vector_bracket.h  vector_compare.h  vector_constructor_by_copying.h  vector_decrease.h  vector_double.h  vector_expSearch.h  vector_increase.h  vector_mergeSort.h  vector_partition_B.h  vector_partition_a1.h  vector_partition_b1.h  vector_quickSort.h  vector_removeInterval.h
Chapter2/Bitmap/: CMakeLists.txt  bitmap_o1_init.h  bitmap_o1_init_set_only.h
Chapter3/List/: CMakeLists.txt  Josephus_3_19.h  List.h  List_bracket.h  List_clear.h  List_constructor_by_copying.h  List_copyNodes.h  List_deduplicate.h  List_destructor.h  List_disordered.h  List_find.h  List_half.h  List_implementation.h  List_increase.h  List_initialize.h  List_insert.h  List_insertionSort.h  List_merge.h  List_mergeSort.h  List_remove.h  List_reverse1.h  List_reverse2.h  List_reverse3.h  List_search.h  List_selectMax.h  List_selectionSort.h  List_sort.h  List_traverse.h  List_uniquify.h  listNode.h  listNode_implementation.h  listNode_insertAsPred.h  listNode_insertAsSucc.h  list_test.h  main (conflicted @DESKTOP-5OC7Q82 2018_01_16_16_21_28).cpp  main (conflicted @DESKTOP-BUAJ007 2018_01_10_19_10_54).cpp  main.cpp
Chapter4/Queue/: CMakeLists.txt  Queue.h  Queue_implementation.h  main.cpp  (+1 more)
_share/: checkorder_elem.h  checkorder_list.h  checkorder_vector.h  crc_elem.h  crc_list.h  crc_vector.h  decrease_elem.h  decrease_vector.h  double_elem.h  double_vector.h  hailstone_elem.h  half_elem.h  half_list.h  increase_elem.h  increase_list.h  increase_vector.h  rand.h  release.h  util.h
chapter2/: bisect_right.py
fibonacci/: fib.h
uniprint/: print.h  print_bintree.h  print_implementation.h  print_traversable.h
(+96 files in other folders)
