cmake_minimum_required(VERSION 3.9)
project(List)

set(CMAKE_CXX_STANDARD 14)

add_executable(List main.cpp list_test.h List.h listNode.h listNode_implementation.h listNode_insertAsSucc.h listNode_insertAsPred.h List_implementation.h List_bracket.h List_initialize.h List_copyNodes.h List_constructor_by_copying.h List_destructor.h List_disordered.h List_find.h List_search.h List_insert.h List_remove.h List_clear.h List_traverse.h List_sort.h List_insertionSort.h List_selectMax.h List_selectionSort.h List_merge.h List_mergeSort.h List_deduplicate.h List_uniquify.h List_reverse1.h List_reverse2.h List_reverse3.h List_increase.h List_half.h Josephus_3_19.h)